--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@
 * {
   margin: 0%;
   padding: 0%;
+  box-sizing: border-box;
   background-color: #191819;
 }
 
 nav {
   display: flex;
+  background-color: #31173c;
 }
 
 nav a {
@@ -29,14 +31,26 @@ header {
   background-color: #31173c;
 }
 
-img {
+.logo {
   width: 350px;
   background-color: #31173c;
   padding-right: 20px;
 }
 
 .noxus {
-  width: 500px;
+  width: 100vw;
+}
+
+.noxus img {
+  width: 100%;
+}
+
+.gradient {
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  height: 500px;
+  background-image: linear-gradient(black);
 }
 
 footer {
