--- a/style.css
+++ b/style.css
@@ -1,23 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Roboto+Slab&display=swap");
 
+:root {
+  --golden-color: #806b2c;
+}
+
 * {
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
+}
+
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
   background-color: #191819;
 }
 
-nav {
+.start {
   display: flex;
   background-color: #31173c;
 }
 
-nav a {
+.a {
   text-align: left;
   text-decoration: none;
   font-size: 35px;
   padding-left: 100px;
-  padding-top: 58px;
+  padding-top: 52px;
   background-color: #31173c;
   height: 100px;
   color: white;
@@ -26,18 +35,21 @@ nav a {
 
 header {
   display: flex;
-  justify-content: flex-end;
   justify-content: space-between;
   background-color: #31173c;
+  width: 100vw;
 }
 
 .logo {
   width: 350px;
   background-color: #31173c;
-  padding-right: 20px;
+  padding-right: 10px;
 }
 
 .noxus {
+  background-image: url("./noxus.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   width: 100vw;
 }
 
@@ -50,11 +62,80 @@ header {
   align-items: flex-end;
   width: 100%;
   height: 500px;
-  background-image: linear-gradient(black);
+  background: rgb(25, 24, 25);
+  background: linear-gradient(
+    0deg,
+    rgba(25, 24, 25, 1) 0%,
+    rgba(0, 212, 255, 0) 50%
+  );
+}
+
+.titles {
+  text-align: center;
+  font-size: 47px;
+  font-family: "Libre Baskerville", serif;
+  color: #806b2c;
+}
+
+.h3 {
+  opacity: 90%;
+}
+
+.h2 {
+  opacity: 80%;
+}
+
+.crest {
+  opacity: 80%;
+}
+
+.select {
+  color: #806b2c;
+  font-size: 22px;
+  font-family: "Libre Baskerville", serif;
+  order: 2;
+  padding-top: 250px;
+}
+
+.selcrest {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.selection {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 100px;
+  gap: 30px;
+  place-items: center;
+}
+
+.sel {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+  background-color: #31173c;
+  border-radius: 0%;
+  color: white;
+  text-decoration: none;
+  font-size: 35px;
+  width: 300px;
+  border: var(--golden-color) 3px solid;
+  padding: 10px;
+}
+
+.fight-button {
+  background-color: #31173c;
+}
+
+.fight-button img {
+  width: 55px;
 }
 
 footer {
   text-align: end;
-  height: 50px;
+  height: 55px;
   background-color: #31173c;
 }
