--- a/css/index.css
+++ b/css/index.css
@@ -1,53 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Roboto+Slab&display=swap");
-
-:root {
-  --golden-color: #806b2c;
-}
-
-* {
-  margin: 0%;
-  padding: 0%;
-  box-sizing: border-box;
-}
-
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  background-color: #191819;
-}
-
-.start {
-  display: flex;
-  background-color: #31173c;
-}
-
-.a {
-  text-align: left;
-  text-decoration: none;
-  font-size: 35px;
-  padding-left: 100px;
-  padding-top: 52px;
-  background-color: #31173c;
-  height: 100px;
-  color: white;
-  font-family: "Libre Baskerville", serif;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  background-color: #31173c;
-  width: 100vw;
-}
-
-.logo {
-  width: 350px;
-  background-color: #31173c;
-  padding-right: 10px;
-}
-
 .noxus {
-  background-image: url("./noxus.jpg");
+  background-image: url("../homepage_photos/noxus.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100vw;
@@ -107,7 +59,7 @@ header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding: 100px;
-  gap: 30px;
+  gap: 50px;
   place-items: center;
 }
 
@@ -132,10 +84,4 @@ header {
 
 .fight-button img {
   width: 55px;
-}
-
-footer {
-  text-align: end;
-  height: 55px;
-  background-color: #31173c;
 }
