--- a/css/assassin-selection.css
+++ b/css/assassin-selection.css
@@ -1,6 +1,7 @@
 .assassin-grid {
   display: flex;
   justify-content: space-between;
+  padding-bottom: 20px;
 }
 
 .syc {
@@ -9,4 +10,25 @@
   font-size: 50px;
   font-family: "Libre Baskerville", serif;
   line-height: 4;
+}
+
+.kata {
+  transition: transform 0.1s;
+}
+.kata:hover {
+  transform: scale(1.05);
+}
+
+.lb {
+  transition: transform 0.1s;
+}
+.lb:hover {
+  transform: scale(1.05);
+}
+
+.tl {
+  transition: transform 0.1s;
+}
+.tl:hover {
+  transform: scale(1.05);
 }
